adding contact page and finishing navigation bar

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,8 @@
                 </ul>
             </nav>
         </header>
-        
+        <p>Name: Jacob Roberts</p>
+        <p>Phone: 601-519-6463</p>
+        <p>Email: jmr108@latech.edu, personal: johnboyjacob1@gmail.com</p>
     </body>
 </html> 
