--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
                 <ul>
                     <button class="seamless-button"><a href="index.html">Home</a></button>
                     <button class="seamless-button"><a href="about.html">About</a></button>
-                    <button class="seamless-button"><a href="">Services</a></button>
-                    <button class="seamless-button"><a href="">Contact</a></button>
+                    <button class="seamless-button"><a href="blog.html">blog</a></button>
+                    <button class="seamless-button"><a href="contact.html">Contact</a></button>
                 </ul>
             </nav>
         </header>
