--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,6 @@
                 </ul>
             </nav>
         </header>
-        
+        <img src="dog.png" alt="dog">
     </body>
 </html> 
