--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
                 </ul>
             </nav>
         </header>
+        dog
         <img src="dog.png" alt="dog">
     </body>
 </html> 
