--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
                 </ul>
             </nav>
         </header>
-        dog
+        cat
         <img src="dog.png" alt="dog">
     </body>
 </html> 
