--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Jacob</title>
-        <link type="text/css" rel="stylesheet" href="common.css">
+         <title>
+            You got Rick-Rolled!
+        </title>
+        <link type="text/css" rel="stylesheet" href="blog.css">
     </head>
     <body>
         <header class="word">
@@ -15,7 +17,8 @@
                 </ul>
             </nav>
         </header>
-        cat
-        <img src="dog.png" alt="dog">
+        <!-- cat -->
+        <!-- <img src="dog.png" alt="dog"> -->
+        <video 
     </body>
 </html> 
